tests/NormalTests/paczka1/small_fuzzy/67629621.err
Error in line 2: ucaMbxNUE S115 67,3
Error in line 7: S584 S115 0,3
